Bug 352276 - Tooltip is not clickable, thus links in tooltip are useless
Summary: Tooltip is not clickable, thus links in tooltip are useless
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: tooltip (other bugs)
Version First Reported In: 16.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL: http://i.imgur.com/UKpHtdC.jpg
Keywords:
: 376688 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-09-04 15:33 UTC by adr.fantini
Modified: 2017-02-19 22:27 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 17.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description adr.fantini 2015-09-04 15:33:36 UTC
When a dolphin tooltip is shown, e.g. when hovering over a file, the tooltip contains links to add tags and comments. However, these are not clickable, since the tooltips are not persistent when the mouse moves, and they disappear. Either they should be clickable, or be removed.

See URL (screenshot) for example.

Reproducible: Always
Comment 1 Elvis Angelaccio 2017-02-05 22:03:57 UTC
Git commit 230fe13d1fccf8c2ab09c0873c1cc4c733cfc3b4 by Elvis Angelaccio.
Committed on 05/02/2017 at 21:56.
Pushed by elvisangelaccio into branch 'master'.

Port tooltips to KToolTipWidget

Use the new KToolTipWidget class (introduced by kwidgetsaddons 5.30) as backend of ToolTipManager.
FileMetaDataToolTip becomes a simple widget used as content of the tooltip.

It is now possible to actually use the metadata widget shown inside the tooltips.
Tooltips are now functional on Wayland as well.

More information about KToolTipWidget in https://git.reviewboard.kde.org/r/129648/
Related: bug 371223
FIXED-IN: 17.04.0

Closes T4980
Differential Revision: D4449

M  +1    -1    CMakeLists.txt
M  +1    -1    src/views/dolphinview.cpp
M  +0    -19   src/views/tooltips/filemetadatatooltip.cpp
M  +2    -6    src/views/tooltips/filemetadatatooltip.h
M  +11   -73   src/views/tooltips/tooltipmanager.cpp
M  +8    -2    src/views/tooltips/tooltipmanager.h

https://commits.kde.org/dolphin/230fe13d1fccf8c2ab09c0873c1cc4c733cfc3b4
Comment 2 Elvis Angelaccio 2017-02-19 22:27:34 UTC
*** Bug 376688 has been marked as a duplicate of this bug. ***