Port tooltips to KToolTipWidget

Use the new KToolTipWidget class (introduced by kwidgetsaddons 5.30) as backend of ToolTipManager.
FileMetaDataToolTip becomes a simple widget used as content of the tooltip.

It is now possible to actually use the metadata widget shown inside the tooltips.
Tooltips are now functional on Wayland as well.

More information about KToolTipWidget in https://git.reviewboard.kde.org/r/129648/

BUG: 352276
BUG: 371223
FIXED-IN: 17.04.0

Closes T4980
Differential Revision: D4449